# admin_backend

./: .env.example  .gitignore  Dockerfile  alembic_admin.ini  docker-compose.yml  fix_db.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 02e32a65ded4_add_cascade_deletes_to_foreign_keys.py  6f32326ff224_fix_recipe_constraints_add_user_.py  7e3e6f42e1c5_add_admin_auth_schema_tables.py  962bd7707944_add_chat_history.py  d1d0514d1366_initial_baseline_for_existing_db.py
alembic_admin/: env.py
alembic_admin/versions/: 28db58a80a74_multi_provider_auth.py  38f604aea78d_remove_google_sub_from_access_requests.py  47ca11f61414_add_profile_id_to_access_requests.py  56fd3fd9a554_remove_email_unique_constraint.py  aa362f860586_initial_admin_tables.py  c3ecc3aae719_add_google_sub_to_admin_profiles.py  ebcf3a6d4d4f_add_viewer_role.py
app/: main.py
app/core/: config.py  dependencies.py
scripts/: create_admin.py
src/: main.py
src/api/: dependencies.py
src/api/dependencies/: admin.py  agent.py  auth.py  db.py  services.py
src/api/routers/: access_requests.py  auth.py  categories.py  parser.py  recipes.py
src/api/schemas/: access_request.py  category.py  parser.py  recipe.py  recipe_draft.py
src/api/v1/: categories.py  recipes.py
src/core/: config.py
src/database/: connection.py
src/database/models/: __init__.py
src/domain/: exceptions.py
src/domain/auth/: models.py  permissions.py
src/domain/categories/: models.py  ports.py
src/services/: category_service.py  recipe_service.py
(+54 files in other folders)
