[project]
name = "admin-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.1",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

